gcc/testsuite/rust/rustc/ui/error-codes/E0516.rs
fn main() {
    let x: typeof(92) = 92; // { dg-error ".E0516." "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-2 }
}

